--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,7 @@ a {
 ul {
   list-style: none;
 }
+/* -----------Header------------ */
 .logo {
   color: #111;
   font-size: 18px;
@@ -22,3 +23,90 @@ ul {
   line-height: 1.11; /* 111.111% */
   letter-spacing: -0.03em;
 }
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
+.menu-header-list {
+}
+.menu-header-item {
+}
+.menu-header-link {
+  color: #111;
+  font-size: 14px;
+  font-weight: 500;
+  line-height: 1.14; /* 114.286% */
+  letter-spacing: -0.2em;
+}
+.soc-header-list {
+}
+.soc-header-item {
+}
+.soc-header-link {
+}
+/* ------------------------- */
+/* ------------Hero------------- */
+.hero {
+  border-radius: 30px;
+  background: rgba(17, 17, 17, 0.6);
+}
+.hero-title {
+  color: #fff;
+  font-size: 28px;
+  font-weight: 500;
+  line-height: 1.21; /* 121.429% */
+  letter-spacing: -0.03em;
+}
+.hero-button-buy {
+  color: #fff;
+  font-family: inherit;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: normal;
+  cursor: pointer;
+}
+.hero-link-nav {
+  color: #fff;
+  font-size: 14px;
+  font-weight: 600;
+  line-height: normal;
+}
+.hero-link-down {
+  color: #fff;
+  font-size: 14px;
+  font-weight: 500;
+  line-height: 1.29;
+  letter-spacing: -0.03em;
+}
+/* ----------------------------- */
+/* -----------Features---------- */
+.features {
+  background: #1e1823;
+}
+.features-list {
+}
+.features-item {
+}
+.features-title {
+  color: #fff;
+  font-size: 18px;
+  font-weight: 600;
+  line-height: normal;
+}
+.features-text {
+  color: rgba(255, 255, 255, 0.7);
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 1.28; /* 128.571% */
+  letter-spacing: -0.02em;
+}
+/* ----------------------------- */
