--- a/css/style.css
+++ b/css/style.css
@@ -815,3 +815,180 @@ img {
   padding-left: 40px;
   padding-right: 40px;
 }
+
+/* FORM */
+.container-page-form {
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  top: 0;
+  background-color: #1d1721b4;
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
+}
+
+.is-open {
+  opacity: 1;
+  visibility: visible;
+  pointer-events: auto;
+}
+
+.container-form {
+  width: 517px;
+  min-height: 794px;
+  position: absolute;
+  border-radius: 15px;
+  background-color: #fafafa;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  padding: 40px;
+}
+.btn-close {
+  background-color: transparent;
+  margin-left: auto;
+  position: absolute;
+  top: 24px;
+  right: 24px;
+  border-radius: 50%;
+  padding: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.close-icons {
+  stroke: #111;
+}
+
+.subtitle-form {
+  text-align: left;
+  max-width: 298px;
+  margin-bottom: 42px;
+  font-weight: 600;
+  font-size: 24px;
+  line-height: 1.16667;
+  letter-spacing: -0.03em;
+  text-transform: uppercase;
+  color: #111;
+}
+.subtitle-form-span {
+  color: #fd9222;
+}
+.modal-form {
+}
+.input-container {
+  margin-bottom: 18px;
+}
+
+.input-container label {
+  font-size: 14px;
+  letter-spacing: -0.02em;
+  color: rgba(64, 64, 64, 0.3);
+}
+
+.modal-label {
+}
+.container-form-svg {
+  margin-top: 8px;
+  position: relative;
+}
+
+.icons-form {
+  fill: transparent;
+  stroke: #404040;
+  top: 50%;
+  transform: translateY(-50%);
+  position: absolute;
+  left: 24px;
+}
+.input-form {
+  width: 100%;
+  outline: transparent;
+  color: #1e1823;
+  border: 1.5px solid rgba(17, 17, 17, 0.05);
+  border-radius: 13px;
+  padding-left: 62px;
+  height: 68px;
+  box-shadow: 0 5px 5px 0 rgba(0, 0, 0, 0.03);
+  background-color: transparent;
+}
+
+.input-form:focus {
+  border-color: #fd9222;
+}
+
+.input-form:focus + .icons-form {
+  stroke: #fd9222;
+}
+
+.comment-label {
+}
+
+.check-input {
+}
+.check-text {
+}
+
+.comment-area {
+  width: 100%;
+  background-color: transparent;
+  outline: transparent;
+  color: #1e1823;
+  padding: 24px 22px;
+  resize: none;
+  border: 1.5px solid rgba(17, 17, 17, 0.05);
+  border-radius: 13px;
+  height: 137px;
+  margin-top: 8px;
+}
+
+.comment-area::placeholder {
+  font-size: 18px;
+  letter-spacing: -0.02em;
+  color: rgba(64, 64, 64, 0.3);
+}
+
+.check-icon {
+  /* fill: wheat;
+  stroke: #404040; */
+}
+.form-btn {
+  font-weight: 600;
+  font-size: 14px;
+  color: #fff;
+  border-radius: 100px;
+  padding: 14px 40px;
+  background-color: #fd9222;
+}
+
+.check-text {
+  line-height: normal;
+  display: flex;
+  align-items: center;
+  position: relative;
+}
+
+.link-policy {
+  text-decoration: underline;
+  color: #fd9222;
+}
+
+.check-text span {
+  width: 20px;
+  height: 20px;
+  border-radius: 6px;
+  border: 1px solid rgba(17, 17, 17, 0.14);
+  margin-right: 12px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  fill: transparent;
+}
+
+.check-input:checked + .check-text span {
+  background-color: #fd9222;
+  border: none;
+  fill: #ffffff;
+}
+/* ------------- */
